--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "@refactoring-do/whatsapp-webhook",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "WhatsApp Cloud API web hook in a nutshell",
   "main": "index.js",
   "scripts": {
     "start": "tsc && node dist/index.js",
-    "test": "jest",
-    "example": "tsc && node dist/example/main.js"
+    "test": "jest --config jestconfig.json --forceExit",
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "keywords": [
     "whatsapp",
@@ -22,8 +29,14 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "prettier": "^2.8.7",
+    "ts-jest": "^29.1.0",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^5.0.3"
   },
   "dependencies": {
     "express": "^4.18.2"
