--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "@refactoring-do/whatsapp-webhook",
-  "version": "1.0.4",
-  "description": "WhatsApp Cloud API web hook in a nutshell",
+  "name": "@refactoring/whatsapp-webhook",
+  "version": "1.0.5",
+  "description": "WhatsApp Cloud API webhook in a nutshell",
+  "private": false,
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
     "lib/**/*"
   ],
   "scripts": {
-    "test": "jest --config jestconfig.json --forceExit",
+    "test": "jest --config ./jest.config.json",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
@@ -30,6 +31,10 @@
   },
   "author": "Refactoring, SRL",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/refactoring-do/whatsapp-webhook/issues"
+  },
+  "homepage": "https://github.com/refactoring-do/whatsapp-webhook#readme",
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
@@ -40,8 +45,5 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^5.0.3"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
   }
 }
