--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "baseUrl": "./",
+    "baseUrl": "./src",
+    "rootDir": "./src",
     "declaration": true,
     "outDir": "./lib",
     "removeComments": true,
